--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p id="nospam">Free - No Spam - No Data Sharing</p>  
         </div>
         <div class="first_right">
-            <img src="file:///D:/HTML/images/dweep.png" alt="image1">
+            <img src="dweep.png" alt="image1">
         </div>
     </div>
     <div class="footer" >
@@ -44,8 +44,8 @@
             <a>Dweep.io</a><br>
             <a>Made with love in India</a><br>
             <div id="icons">
-            <img id="linkedin" src="D:\HTML\micro\LinkedinLogo.png" alt="linkedin">
-            <img id="instagram" src="D:\HTML\micro\InstagramLogo.png" alt="instagram">
+            <img id="linkedin" src="LinkedinLogo.png" alt="linkedin">
+            <img id="instagram" src="InstagramLogo.png" alt="instagram">
             </div>
             <br>
             <a>hello@dweep.io</a>
